<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalendarEntryActivity" >

    <TextView
        android:id="@+id/calendarEntryActivityTitleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendarEntryActivityTitleHeader"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/calendarEntryActivityCreateTitle"
        android:layout_width="fill_parent"
        android:layout_height="28dp"
        android:layout_marginTop="4dp"
        android:inputType="text"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/calendarEntryActivityTitleSeperator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        android:src="?android:attr/listDivider" />

    <TextView
        android:id="@+id/calendarEntryActivityDescriptionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendarEntryActivityDescriptionHeader"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/calendarEntryActivityCreateDescription"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        android:inputType="text"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/calendarEntryActivityDescriptionSeperator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        android:src="?android:attr/listDivider" />

    <TextView
        android:id="@+id/calendarEntryActivityRoomLocationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendarEntryActivityRoomLocationHeader"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/calendarEntryActivityRoomLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/calendarEntryActivityRoomLocationSeperator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        android:src="?android:attr/listDivider" />

    <TextView
        android:id="@+id/calendarEntryActivityStartDateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendarEntryActivityStartDateHeader"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/calendarEntryActivityCreateStartDate"
        android:layout_width="fill_parent"
        android:layout_height="24dp"
        android:textSize="18sp"
        android:clickable="true"
        android:onClick="openStartDateFragment" />

    <ImageView
        android:id="@+id/calendarEntryActivityStartDateSeperator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        android:src="?android:attr/listDivider" />

    <TextView
        android:id="@+id/calendarEntryActivityEndDateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendarEntryActivityEndDateHeader"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/calendarEntryActivityCreateEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/calendarEntryActivityEndDateSeperator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        android:src="?android:attr/listDivider" />

    <TextView
        android:id="@+id/calendarEntryActivityInvitationsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendarEntryActivityInvitationsHeader"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/calendarEntryActivityInvitationsList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>